--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Hurricane Claim Assistant</title>
@@ -7,7 +6,6 @@
   <style>
     :root {
       --navy: #173a63;
-      --navy-700: #102c4a;
       --gold: #c8922b;
       --gold-700: #a6761e;
       --bg: #ffffff;
@@ -17,101 +15,126 @@
       --answer-bg: #f8fafc;
     }
     * { box-sizing: border-box; }
-    html, body { height: 100%; margin: 0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; color: var(--text); background: var(--bg); }
-    .wrap { max-width: 420px; margin: 0 auto; padding: 14px; }
-    .card { border: 1px solid var(--border); border-radius: 16px; background: var(--bg); overflow: hidden; box-shadow: 0 10px 30px rgba(2,6,23,0.06); }
-    .header { display: grid; grid-template-columns: 56px 1fr auto; gap: 12px; align-items: center; padding: 16px; border-bottom: 1px solid var(--border); background: linear-gradient(180deg, #ffffff, #f5f8fd); }
-    .avatar { width: 56px; height: 56px; border-radius: 50%; border: 2px solid #e6efff; display: grid; place-items: center; background: #fff; overflow: hidden; }
-    .title { margin: 0; font-size: 16px; font-weight: 800; color: var(--navy); }
-    .badge { background: #f0f6ff; color: var(--navy); border: 1px solid #d7e6ff; padding: 6px 10px; border-radius: 999px; font-size: 12px; font-weight: 700; }
-    .body { padding: 16px; display: grid; gap: 12px; }
-    .answer-box { background: var(--answer-bg); border: 1px solid var(--border); border-radius: 12px; padding: 12px; min-height: 140px; max-height: 240px; overflow: auto; font-size: 14px; line-height: 1.5; white-space: pre-wrap; }
-    .answer-box.empty { color: var(--muted); }
-    .suggestions h3 { margin: 0 0 8px 0; font-size: 13px; color: var(--navy); }
-    .suggestions ul { list-style: none; margin: 0; padding: 0; display: grid; gap: 8px; }
-    .suggestions li { background: var(--gold); color: #1f2937; border: 1px solid var(--gold-700); border-radius: 10px; padding: 10px 12px; cursor: pointer; font-weight: 600; transition: transform .05s ease, box-shadow .15s ease, background .15s ease; }
-    .suggestions li:hover { background: var(--gold-700); color: #111827; box-shadow: 0 2px 10px rgba(0,0,0,.08); }
-    .suggestions li:active { transform: translateY(1px); }
-    form { display: grid; gap: 8px; }
-    .input-row { display: grid; grid-template-columns: 1fr auto; gap: 8px; align-items: stretch; }
-    textarea { resize: vertical; min-height: 46px; max-height: 120px; padding: 10px 12px; border: 1px solid var(--border); border-radius: 10px; font-size: 14px; line-height: 1.35; outline: none; transition: box-shadow .15s ease, border-color .15s ease; }
-    textarea:focus { border-color: #cbdcfb; box-shadow: 0 0 0 3px rgba(23,58,99,0.15); }
-    button { background: var(--gold); color: #1f2937; border: 0; border-radius: 10px; padding: 0 16px; font-size: 14px; font-weight: 700; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; min-width: 110px; transition: background .15s ease, transform .05s ease; }
-    button:hover { background: var(--gold-700); }
-    button:active { transform: translateY(1px); }
-    button:disabled { opacity: .65; cursor: not-allowed; background: #e8c27a; }
-    .meta { display: flex; justify-content: space-between; gap: 8px; color: var(--muted); font-size: 12px; padding: 0 2px; }
-    .cta { display: grid; gap: 8px; padding: 0 2px; }
-    .call-btn { display: inline-block; text-align: center; background: var(--navy); color: #fff; padding: 10px 14px; border-radius: 10px; text-decoration: none; font-weight: 700; font-size: 14px; }
-    .call-btn:hover { background: var(--navy-700); }
-    .contact { border: 1px solid var(--border); border-radius: 12px; padding: 12px; background: #ffffff; display: grid; gap: 8px; font-size: 14px; }
-    .contact a { color: var(--navy); text-decoration: none; font-weight: 700; }
-    .contact a:hover { text-decoration: underline; }
-    .fineprint { font-size: 11px; color: var(--muted); line-height: 1.35; }
-    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border-width: 0; }
-    .spinner { width: 14px; height: 14px; border: 2px solid rgba(0,0,0,0.2); border-top-color: rgba(0,0,0,0.7); border-radius: 50%; animation: spin 1s linear infinite; margin-right: 8px; }
-    .tiny-link { color: var(--navy); font-size: 12px; text-decoration: none; }
-    .tiny-link:hover { text-decoration: underline; }
-    @keyframes spin { to { transform: rotate(360deg); } }
-    @media (max-width: 420px) { .wrap { padding: 12px; } .header { padding: 14px; } .body { padding: 14px; } }
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: var(--bg);
+      color: var(--text);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+    }/* Compact, centered widget */
+.wrap { max-width: 420px; margin: 0 auto; padding: 14px; }
+.widget {
+  border: 1px solid var(--border);
+  border-radius: 16px;
+  background: #fff;
+  box-shadow: 0 10px 30px rgba(2,6,23,0.06);
+  padding: 16px;
+  display: grid;
+  gap: 12px;
+}
+
+/* Answer area with suggestions */
+.answer-box {
+  background: var(--answer-bg);
+  border: 1px solid var(--border);
+  border-radius: 12px;
+  padding: 12px;
+  min-height: 160px;
+  max-height: 280px;
+  overflow: auto;
+  font-size: 14px;
+  line-height: 1.5;
+  white-space: pre-wrap;
+}
+.answer-box.empty { color: var(--muted); }
+
+/* Suggested questions (gold, same as Ask button) */
+.suggestions h3 { margin: 0 0 8px 0; font-size: 13px; color: var(--navy); }
+.suggestions ul { list-style: none; margin: 0; padding: 0; display: grid; gap: 8px; }
+.suggestions li {
+  background: var(--gold);
+  color: #1f2937;
+  border: 1px solid var(--gold-700);
+  border-radius: 10px;
+  padding: 10px 12px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: transform .05s ease, box-shadow .15s ease, background .15s ease;
+}
+.suggestions li:hover { background: var(--gold-700); color: #111827; box-shadow: 0 2px 10px rgba(0,0,0,.08); }
+.suggestions li:active { transform: translateY(1px); }
+
+/* Input row */
+form { display: grid; gap: 8px; }
+.input-row { display: grid; grid-template-columns: 1fr auto; gap: 8px; align-items: stretch; }
+textarea {
+  resize: vertical;
+  min-height: 46px;
+  max-height: 120px;
+  padding: 10px 12px;
+  border: 1px solid var(--border);
+  border-radius: 10px;
+  font-size: 14px;
+  line-height: 1.35;
+  outline: none;
+  transition: box-shadow .15s ease, border-color .15s ease;
+}
+textarea:focus { border-color: #cbdcfb; box-shadow: 0 0 0 3px rgba(23,58,99,0.15); }
+button {
+  background: var(--gold);
+  color: #1f2937;
+  border: 0;
+  border-radius: 10px;
+  padding: 0 16px;
+  font-size: 14px;
+  font-weight: 700;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 110px;
+  transition: background .15s ease, transform .05s ease;
+}
+button:hover { background: var(--gold-700); }
+button:active { transform: translateY(1px); }
+button:disabled { opacity: .65; cursor: not-allowed; background: #e8c27a; }
+
+.spinner {
+  width: 14px; height: 14px;
+  border: 2px solid rgba(0,0,0,0.2);
+  border-top-color: rgba(0,0,0,0.7);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-right: 8px;
+  display: none;
+}
+@keyframes spin { to { transform: rotate(360deg); } }
+
+/* Visually hidden (fix for previous snippet) */
+.sr-only {
+  position: absolute;
+  width: 1px; height: 1px;
+  padding: 0; margin: -1px;
+  overflow: hidden; clip: rect(0,0,0,0);
+  white-space: nowrap; border: 0;
+}
   </style>
 </head>
 <body>
-  <div class="wrap" role="application" aria-label="Hurricane Claim Assistant">
-    <div class="card" role="region" aria-labelledby="assistant-title">
-      <div class="header">
-        <div class="avatar" aria-hidden="true">
-          <!-- Neutral professional avatar (SVG) -->
-          <svg viewBox="0 0 64 64" width="44" height="44" aria-hidden="true">
-            <defs>
-              <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-                <stop offset="0" stop-color="#173a63"/>
-                <stop offset="1" stop-color="#c8922b"/>
-              </linearGradient>
-            </defs>
-            <circle cx="32" cy="32" r="32" fill="url(#g)" opacity="0.10"/>
-            <circle cx="32" cy="24" r="12" fill="#f2d3b1"/>
-            <path d="M20 46c0-6.6 24-6.6 24 0v6H20v-6z" fill="#dbe6f7"/>
-            <path d="M20 22c0-8 8-12 12-12s12 4 12 12v3c0 1.7-1.3 3-3 3h-1c-1.7 0-3-1.3-3-3v-2c0 4-3 7-7 7s-7-3-7-7v2c0 1.7-1.3 3-3 3h-1c-1.7 0-3-1.3-3-3v-3z" fill="#2b3a67"/>
-          </svg>
-        </div>
-        <div><h1 id="assistant-title" class="title">Hurricane Claim Assistant</h1></div>
-        <div class="badge" aria-label="Free consultation">Free Consultation</div>
-      </div>
-
-      <div class="body">
-        <div id="answer" class="answer-box empty" aria-live="polite"></div>
-
-        <form id="ask-form">
-          <label class="sr-only" for="question">Your question</label>
-          <div class="input-row">
-            <textarea id="question" name="question" placeholder="Type your question…" required></textarea>
-            <button id="submit-btn" type="submit" aria-label="Submit question">
-              <span id="btn-spinner" class="spinner" style="display:none;"></span>
-              <span id="btn-text">Ask</span>
-            </button>
-          </div>
-          <div><a id="show-suggestions" class="tiny-link" href="#">Show suggested questions</a></div>
-        </form>
-
-        <div class="meta">
-          <span class="notice">Answers are grounded to this landing page.</span>
-          <span id="status" aria-live="polite"></span>
-        </div>
-
-        <div class="cta">
-          <a class="call-btn" href="tel:8134455780" aria-label="Call now">Call 813-445-5780</a>
-          <div class="contact" aria-label="Contact information">
-            <div><strong>Phone:</strong> <a id="contact-phone" href="tel:8134455780">813-445-5780</a></div>
-            <div><strong>Office:</strong> <a id="contact-map" href="https://maps.google.com/?q=5331%20Primrose%20Lake%20Circle%2C%20Suite%20212%2C%20Tampa%2C%20FL%2033647" target="_blank" rel="noopener">5331 Primrose Lake Circle, Suite 212, Tampa, FL 33647</a></div>
-          </div>
-          <div class="fineprint">General information only—not legal advice.</div>
-        </div>
-      </div>
+  <div class="wrap">
+    <div class="widget" role="application" aria-label="Hurricane Claim Assistant">
+      <div id="answer" class="answer-box empty" aria-live="polite"></div>  <form id="ask-form">
+    <label class="sr-only" for="question">Your question</label>
+    <div class="input-row">
+      <textarea id="question" name="question" placeholder="Type your question…" required></textarea>
+      <button id="submit-btn" type="submit" aria-label="Submit question">
+        <span id="btn-spinner" class="spinner"></span>
+        <span id="btn-text">Ask</span>
+      </button>
     </div>
-  </div>
-
-  <script>
+  </form>
+</div>
+  </div>  <script>
     // CONFIG
     const DEMO_MODE = true; // set to false after you deploy the backend
     const BACKEND_URL = "https://your-worker-subdomain.workers.dev/api/assistant-answer"; // replace after deploying worker
@@ -135,48 +158,74 @@
       "karkatselos","your property advocate","results","successes",
       "office","address","location","contact","call","phone","813","map"
     ];
-    function isRelevant(q) { const qs = (q || "").toLowerCase(); return RELEVANCE_KEYWORDS.some(kw => qs.includes(kw)); }
+    function isRelevant(q) {
+      const qs = (q || "").toLowerCase();
+      return RELEVANCE_KEYWORDS.some(kw => qs.includes(kw));
+    }
 
     function setLoading(loading) {
       const btn = document.getElementById("submit-btn");
       const sp = document.getElementById("btn-spinner");
       const bt = document.getElementById("btn-text");
-      btn.disabled = loading; sp.style.display = loading ? "inline-block" : "none"; bt.textContent = loading ? "Thinking…" : "Ask";
+      btn.disabled = loading;
+      sp.style.display = loading ? "inline-block" : "none";
+      bt.textContent = loading ? "Thinking…" : "Ask";
     }
 
     function showAnswer(text, opts = {}) {
       const box = document.getElementById("answer");
       box.classList.toggle("empty", !text);
-      if (!text) { renderSuggestions(); }
-      else {
+      if (!text) {
+        renderSuggestions();
+      } else {
         box.textContent = text;
         box.style.borderColor = "var(--border)";
         box.style.background = "var(--answer-bg)";
-        if (opts.type === "error") { box.style.borderColor = "#fde2e2"; box.style.background = "#fff7f7"; }
+        if (opts.type === "error") {
+          box.style.borderColor = "#fde2e2";
+          box.style.background = "#fff7f7";
+        }
       }
     }
 
-    function setStatus(msg) { document.getElementById("status").textContent = msg || ""; }
-
     async function askBackend(question) {
-      const payload = { question };
-      const res = await fetch(BACKEND_URL, { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(payload) });
-      if (!res.ok) { const t = await res.text().catch(() => ""); throw new Error("Backend error: " + (t || res.status)); }
-      const data = await res.json(); return data.answer || "";
+      const res = await fetch(BACKEND_URL, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ question })
+      });
+      if (!res.ok) {
+        const t = await res.text().catch(() => "");
+        throw new Error("Backend error: " + (t || res.status));
+      }
+      const data = await res.json();
+      return data.answer || "";
     }
 
-    // Demo answers (sample copy)
+    // Demo answers
     function demoAnswer(question) {
       const q = question.toLowerCase();
       if (q.includes("fee") || q.includes("fees") || q.includes("upfront") || q.includes("contingency") || q.includes("cost") || q.includes("price")) {
         return "Consultation is free. The firm typically operates on a contingency basis—no attorney fees unless there’s a recovery.";
       }
-      if (q.includes("consultation")) { return "Schedule your free consultation from this page or by calling 813-445-5780. We’ll review your situation and outline next steps."; }
-      if (q.includes("denied") || q.includes("underpaid") || q.includes("low offer")) { return "Yes—if your hurricane damage claim was denied or underpaid, the firm can evaluate the decision and push for a fair result."; }
-      if (q.includes("area") || q.includes("serve") || q.includes("tampa") || q.includes("pinellas") || q.includes("hillsborough") || q.includes("pasco")) { return "The page focuses on the Tampa Bay Area, including Hillsborough, Pinellas, and Pasco counties."; }
-      if (q.includes("result") || q.includes("success")) { return "Recent success themes include full roof replacements secured and payment for interior water damages after reversing insurer denials."; }
-      if (q.includes("address") || q.includes("office") || q.includes("location")) { return "Office: 5331 Primrose Lake Circle, Suite 212, Tampa, FL 33647."; }
-      if (q.includes("call") || q.includes("phone") || q.includes("contact")) { return "Call 813-445-5780 or use the page form to schedule your free consultation."; }
+      if (q.includes("consultation")) {
+        return "Schedule your free consultation from this page or by calling 813-445-5780. We’ll review your situation and outline next steps.";
+      }
+      if (q.includes("denied") || q.includes("underpaid") || q.includes("low offer")) {
+        return "Yes—if your hurricane damage claim was denied or underpaid, the firm can evaluate the decision and push for a fair result.";
+      }
+      if (q.includes("area") || q.includes("serve") || q.includes("tampa") || q.includes("pinellas") || q.includes("hillsborough") || q.includes("pasco")) {
+        return "The page focuses on the Tampa Bay Area, including Hillsborough, Pinellas, and Pasco counties.";
+      }
+      if (q.includes("result") || q.includes("success")) {
+        return "Recent success themes include full roof replacements secured and payment for interior water damages after reversing insurer denials.";
+      }
+      if (q.includes("address") || q.includes("office") || q.includes("location")) {
+        return "Office: 5331 Primrose Lake Circle, Suite 212, Tampa, FL 33647.";
+      }
+      if (q.includes("call") || q.includes("phone") || q.includes("contact")) {
+        return "Call 813-445-5780 or use the page form to schedule your free consultation.";
+      }
       return "This page covers hurricane-claim help, free consultations, the Tampa Bay service area, and examples of results. Ask about any of these topics.";
     }
 
@@ -202,21 +251,33 @@
     }
 
     document.getElementById("ask-form").addEventListener("submit", async (e) => {
-      e.preventDefault(); setStatus("");
-      const input = document.getElementById("question"); const question = input.value.trim(); if (!question) return;
-      if (!isRelevant(question)) { showAnswer("I’m sorry. That isn’t a relevant question."); return; }
+      e.preventDefault();
+      const input = document.getElementById("question");
+      const question = input.value.trim();
+      if (!question) return;
+
+      if (!isRelevant(question)) {
+        showAnswer(IRRELEVANT_MESSAGE);
+        return;
+      }
+
       setLoading(true);
       try {
-        let answer; if (DEMO_MODE) { await new Promise(r => setTimeout(r, 400)); answer = demoAnswer(question); } else { answer = await askBackend(question); }
-        showAnswer(answer); setStatus("Answered");
-      } catch (err) { console.error(err); showAnswer("Sorry—something went wrong. Please try again.", { type: "error" }); setStatus("Error"); }
-      finally { setLoading(false); input.focus(); input.select(); }
+        const answer = DEMO_MODE
+          ? (await new Promise(r => setTimeout(r, 400)), demoAnswer(question))
+          : await askBackend(question);
+        showAnswer(answer);
+      } catch (err) {
+        console.error(err);
+        showAnswer("Sorry—something went wrong. Please try again.", { type: "error" });
+      } finally {
+        setLoading(false);
+        input.focus();
+        input.select();
+      }
     });
 
-    document.getElementById("show-suggestions").addEventListener("click", (e) => { e.preventDefault(); renderSuggestions(); });
-
-    // Initial state
+    // Initial render
     renderSuggestions();
-  </script>
-</body>
+  </script></body>
 </html>
